Fix search on mobile devices

--- a/frontend/src/styles/eclExtra.scss
+++ b/frontend/src/styles/eclExtra.scss
@@ -68,3 +68,7 @@
 .ecl-search-form .ecl-button__container {
   justify-content: space-around;
 }
+
+.ecl-site-header__search-toggle {
+  margin-right: 2.5rem !important;
+}
